--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>Halo teacher</h1>
+    <d>commit 1</d>
+    <d>commit 2</d>
 </body>
 <script src="index.js"></script>
 </html>
