--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <h1>Halo teacher</h1>
     <d>commit 1</d>
     <d>commit 2</d>
+    <d>commit 2</d>
+    <d>commit 2</d>
 </body>
 <script src="index.js"></script>
 </html>
