--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <d>commit 2</d>
     <d>commit 2</d>
     <d>commit 2</d>
+    <d>commit 2</d>
+    <d>commit 2</d>
 </body>
 <script src="index.js"></script>
 </html>
