--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <d>commit 2</d>
     <d>commit 2</d>
     <d>commit 2</d>
+    <d>commit 2</d>
+    <d>commit 2</d>
+    <d>commit 2</d>
 </body>
 <script src="index.js"></script>
 </html>
